# businessradar

./: .gitignore  CLAUDE.md  PRD.md  pyproject.toml
.remember/tmp/: save-session.pid
docs/agents/: domain.md
keywords/: jiangsu_it.txt
src/businessradar/: captcha_handler.py  cli.py  config.py  llm_client.py  models.py  page_analyzer.py  page_fetcher.py  result_evaluator.py  script_generator.py  script_runner.py  trial_loop.py
tests/: conftest.py  test_captcha_handler.py  test_cli.py  test_config.py  test_llm_client.py  test_page_analyzer.py  test_page_fetcher.py  test_real_llm_client.py  test_result_evaluator.py  test_script_generator.py  test_script_runner.py  test_trial_loop.py
