[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "businessradar"
version = "0.1.0"
description = "招投标信息智能提取工具 — LLM 驱动的自动脚本生成"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "openai>=1.0",
]

[project.scripts]
businessradar = "businessradar.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
